[gd_scene load_steps=3 format=3 uid="uid://b4wtukdksx2k1"]

[ext_resource type="Script" path="res://Objects/Deck/deck.gd" id="1_4n7g4"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_78xvj"]
properties/0/path = NodePath(".:cards")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:discardPile")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("HBoxContainer/CardCountDisplay:text")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("HBoxContainer/DiscardCountDisplay:text")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="Deck" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4n7g4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardCountDisplay" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "DECK"

[node name="DiscardCountDisplay" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="Draw" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 33.0
offset_right = 51.0
offset_bottom = 64.0
text = "Draw"

[node name="cardsSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_78xvj")

[connection signal="pressed" from="Draw" to="." method="_on_draw_pressed"]
